# pyTauDEM

./: README.md  pyproject.toml  run_pyTauDEM.ipynb
pyTauDEM/: __init__.py  algorithm.py  core.py
pyTauDEM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
